--- a/site/layouts/partials/footer.html
+++ b/site/layouts/partials/footer.html
@@ -1,5 +1,6 @@
   <footer>
     <p>&copy; {{ now.Year }} <a href="{{ .Site.BaseURL }}">{{ .Site.Title }}</a></p>
+    <p>This site is built with Hugo & hosted on Netlify. The source code is hosted on Github</p>
   </footer>
 
   <script src="app.js"></script>
