--- a/site/layouts/partials/header.html
+++ b/site/layouts/partials/header.html
@@ -7,20 +7,22 @@
 	<title>{{ .Title }}</title>
 	{{ with .Site.Params.description }}<meta name="description" content="{{ . }}">{{ end }}
 	{{ with .Site.Params.author }}<meta name="author" content="{{ . }}">{{ end }}
-	<link rel="stylesheet" href="{{ .Site.BaseURL }}css/style.css">
+	<link rel="stylesheet" href="{{ .Site.BaseURL }}css/main.css">
 	{{ if .RSSLink -}}<link href="{{ .RSSLink }}" rel="feed" type="application/rss+xml" title="{{ .Site.Title }}">{{- end }}
 	{{ .Hugo.Generator }}
 </head>
 <body>
 	<header>
-        <a href="{{ .Site.BaseURL }}">{{ .Site.Title }}</a>
-        <span>an online notebook cataloguing the always expanding web development landscape & creative side of code: generative art, data-visualisation, graphics...</span>
+        <a class="header header__title" href="{{ .Site.BaseURL }}">{{ .Site.Title }}</a>
+		<p class="header header__text">an online notebook cataloguing the always expanding web development landscape & creative side of code: generative art, data-visualisation, graphics...</p>
+		
 		<nav>
-			<ul>
+			<ul class="menu">
 				{{ range .Site.Menus.main }}
-				<li><a href="{{ .URL | relURL }}">{{ .Name }}</a></li>
+				<li class="menu menu__item"><a href="{{ .URL | relURL }}">{{ .Name }}</a></li>
 				{{ end }}
 			</ul>
 		</nav>
+			
     </header>
 
