add container & fix post dates

--- a/site/layouts/_default/single.html
+++ b/site/layouts/_default/single.html
@@ -2,6 +2,7 @@
 
 <main>
     <article>
+        <span><time>{{ .Date.Format "January 2, 2006" }}</time> {{ if .Params.External }} — <span >for {{ .Params.External.Host }}</span>        {{ end }}</span>
         <h1 class="single__title">{{ .Title }}</h1>
         <div class="single__content">
             {{ .Content }}
@@ -10,8 +11,6 @@
         <div>
             {{ template "_internal/disqus.html" . }}
         </div>
-
-        <time class="single__date">published {{ .Date.Format "02.01.2006" }}</time>
     </article>
 </main>
 
