fix mobile menu fix js across pages

--- a/site/layouts/_default/list.html
+++ b/site/layouts/_default/list.html
@@ -18,4 +18,6 @@
     {{ end }}
 </ul>
 
-{{ partial "pagination.html" . }} {{ partial "footer.html" . }}
+{{ partial "pagination.html" . }}
+
+{{ partial "footer.html" . }}
