--- a/site/layouts/partials/header.html
+++ b/site/layouts/partials/header.html
@@ -9,30 +9,34 @@
 	{{ with .Site.Params.description }}
 	<meta name="description" content="{{ . }}">{{ end }} {{ with .Site.Params.author }}
 	<meta name="author" content="{{ . }}">{{ end }}
+	<base href="/">
+	
 	<link rel="stylesheet" href="{{ .Site.BaseURL }}css/main.css"> {{ if .RSSLink -}}
 	<link href="{{ .RSSLink }}" rel="feed" type="application/rss+xml" title="{{ .Site.Title }}">{{- end }} {{ .Hugo.Generator }}
 </head>
 
 <body>
 	<header>
-		<a class="header header__title" href="{{ .Site.BaseURL }}">{{ .Site.Title }}</a>
-		<p class="header header__text">an online notebook cataloguing the always expanding web development landscape & creative side of code: generative art,
-			data-visualisation, graphics...</p>
+		<div>
+			<a class="header header__title" href="{{ .Site.BaseURL }}">{{ .Site.Title }}</a>
+			<p class="header header__text">an online notebook cataloguing the always expanding web development landscape & creative side of code: generative art,
+				data-visualisation, graphics...</p>
 
-		<input type="checkbox" id="mobile_menu"></input>
-		<div class="menu_tab">
-			<label for="mobile_menu">menu +</label>
-		</div>
+			<input type="checkbox" id="mobile_menu"></input>
+			<div class="menu_tab">
+				<label for="mobile_menu">menu +</label>
+			</div>
 
-		<div class="overlay overlay__panel">
-			<label for="mobile_menu"></label>
-			<nav>
-				<ul class="menu">
-					{{ range .Site.Menus.main }}
-					<li class="menu menu__item"><a href="{{ .URL | relURL }}">{{ .Name }}</a></li>
-					{{ end }}
-				</ul>
-			</nav>
+			<div id="menu">
+				<label for="mobile_menu"></label>
+				<nav>
+					<ul id="menu_items" class="desktop__menu">
+						{{ range .Site.Menus.main }}
+						<li class="menu menu__item"><a href="{{ .URL | relURL }}">{{ .Name }}</a></li>
+						{{ end }}
+					</ul>
+				</nav>
+			</div>
 		</div>
 
 	</header>
