--- a/src/css/styles/mq/desktop-mq.css
+++ b/src/css/styles/mq/desktop-mq.css
@@ -4,52 +4,12 @@
   }
 
   /* menu styles start */
-
-  input {
-    display: none;
-  }
-
-  ul.menu {
-    display: flex;
-    justify-content: center;
-  }
-
   .menu_tab {
     display: none;
   }
 
-  #mobile_menu {
-    display: none;
-  }
-
-  .overlay {
-    position: relative;
-  }
-
-  .overlay__panel nav ul {
-    transition: none;
-  }
-
-  .overlay__panel,
-  .menu_tab ~ .overlay__panel,
-  #mobile_menu:checked ~ .overlay__panel,
-  .overlay__panel nav ul {
-    opacity: 1;
-  }
-
-  .menu_tab ~ .overlay__panel,
-  #mobile_menu:checked ~ .overlay__panel {
-    visibility: visible;
-  }
-
-  .overlay nav {
-    text-align: center;
-    position: relative;
-    top: 50%;
-    height: 60%;
-    font-size: 54px;
-    -webkit-transform: translateY(-80%);
-    transform: translateY(-80%);
+  .menu__item {
+    padding: 0px 20px 0px 0px;
   }
   /* menu styles end */
 }
