add links styling

--- a/site/layouts/_default/list.html
+++ b/site/layouts/_default/list.html
@@ -12,7 +12,7 @@
             <!-- automatically takes the first paragraph in the .md article -->
         </div>
 
-        <p class="snippet__more"><small><a href="{{.RelPermalink}}">Read more ››</a></small></p>
+        <p class="snippet__more"><small><a class="snippet__more" href="{{.RelPermalink}}">Read more ››</a></small></p>
     </li>
 
     {{ end }}
