--- a/src/css/styles/mq/tab-mq.css
+++ b/src/css/styles/mq/tab-mq.css
@@ -2,4 +2,25 @@
   body {
     width: 80%;
   }
+
+  .menu_tab {
+    top: 1em;
+    right: 2em;
+  }
+
+  .menu__item {
+    padding: 0px 20px 0px 0px;
+    font-size: 1rem;
+  }
+
+  .title {
+    padding: 0px 0px 20px 0;
+    flex-direction: row;
+  }
+
+  .header.header__text {
+    min-width: 19em;
+    padding: 0px;
+  }
+
 }
