--- a/src/css/styles/mq/desktop-mq.css
+++ b/src/css/styles/mq/desktop-mq.css
@@ -4,6 +4,10 @@
   }
 
   /* menu styles start */
+  header {
+    padding-bottom: 2em;
+  }
+
   .header_container {
     display: flex;
     justify-content: space-between;
@@ -12,7 +16,7 @@
 
   .header.header__text {
     min-width: 28em;
-    padding: 0 20px 0px 0px;
+    padding: 0px 20px 0 10px;
     margin-top: 1.1em;
   }
 
