--- a/site/layouts/partials/related_posts.html
+++ b/site/layouts/partials/related_posts.html
@@ -1,9 +1,11 @@
-
-<ul>
-    {{ range first 3 ( where ( where .Site.Pages.ByDate.Reverse ".Params.tags" "intersect" .Params.tags ) "Permalink" "!=" .Permalink ) }}
-      <li class="relatedPost">
-        ⤳ <a href="{{ .RelPermalink }}">{{ .Title | markdownify }}</a><br />
-        {{ .Description | markdownify }}
-      </li>
-    {{ end }}
-  </ul>
+<div class="related">
+  <h1 class="related__title">If you liked this post you may also enjoy:</h1>
+  <ul>
+      {{ range first 3 ( where ( where .Site.Pages.ByDate.Reverse ".Params.tags" "intersect" .Params.tags ) "Permalink" "!=" .Permalink ) }}
+        <li class="relatedPost">
+          ⤳ <a href="{{ .RelPermalink }}">{{ .Title | markdownify }}</a><br />
+          {{ .Description | markdownify }}
+        </li>
+      {{ end }}
+    </ul>
+</div>
