--- a/site/layouts/partials/pagination.html
+++ b/site/layouts/partials/pagination.html
@@ -4,7 +4,7 @@
 {{ if gt $pag.TotalPages 1 }}
  
 <nav class="pagination">
-    {{ range $pag.Pagers }}{{ if eq . $pag }}<span>{{ .PageNumber }}</span>{{ else }}<a href='{{ $baseurl }}{{ .URL }}'>{{ .PageNumber }}</a>{{ end }}{{ end }}
+    {{ range $pag.Pagers }}{{ if eq . $pag }}<span>{{ .PageNumber }}</span>{{ else }}<a href='{{ .URL }}'>{{ .PageNumber }}</a>{{ end }}{{ end }}
  
     <div>
         {{ if .Paginator.HasPrev }}
