--- a/site/layouts/_default/list.html
+++ b/site/layouts/_default/list.html
@@ -2,7 +2,7 @@
 
 <ul class="snippet">
     <!-- Ranges through content/blog/*.md -->
-    {{ $paginator := .Paginate (where .Site.Pages "Type" "post") }} {{ range (.Paginator 5).Pages }}
+    {{ $paginator := .Paginate (where .Site.Pages "Type" "posts") }} {{ range (.Paginator 5).Pages }}
     <li class="snippet snippet__section">
 
         <a class="snippet__section snippet__title" href="{{.RelPermalink}}">{{ .Title }}</a>
