--- a/site/layouts/partials/footer.html
+++ b/site/layouts/partials/footer.html
@@ -1,7 +1,11 @@
 <footer>
   <p>&copy; {{ now.Year }} <a href="{{ .Site.BaseURL }}">{{ .Site.Title }}</a></p>
-  <p>This site is built with Hugo & hosted on Netlify. The source code is hosted on Github</p>
+  <p>This site is built with <a href="https://gohugo.io/">Hugo</a> & hosted on <a href="https://www.netlify.com/">Netlify</a>. The source code is hosted on <a href="https://github.com/">Github</a></p>
+
+  <a href="https://twitter.com/iamelizasj?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-show-count="true">Follow @iamelizasj</a><script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
 </footer>
+
+
 
 <script src="app.js"></script>
 <script src="prism.js"></script>
