--- a/src/css/styles/base.css
+++ b/src/css/styles/base.css
@@ -146,6 +146,15 @@ a:hover.header.header__title {
   background-color: rgba(255, 255, 255, 0);
 }
 
+footer {
+  margin: 1em 0em 0em 0em;
+  height: 150px;
+}
+
+footer > p {
+  margin: 0px;
+}
+
 footer,
 time,
 .header__text,
