--- a/site/layouts/partials/footer.html
+++ b/site/layouts/partials/footer.html
@@ -1,8 +1,11 @@
 <footer>
-  <p>&copy; {{ now.Year }} <a href="{{ .Site.BaseURL }}">{{ .Site.Title }}</a></p>
-  <p>This site is built with <a href="https://gohugo.io/">Hugo</a> & hosted on <a href="https://www.netlify.com/">Netlify</a>. The source code is hosted on <a href="https://github.com/">Github</a></p>
+    <p>&copy; {{ now.Year }} <a href="{{ .Site.BaseURL }}">{{ .Site.Title }}</a></p>
+    <p>This site is built with <a href="https://gohugo.io/">Hugo</a> & hosted on <a href="https://www.netlify.com/">Netlify</a>. The source code is hosted on <a href="https://github.com/">Github</a></p>
 
-  <a href="https://twitter.com/iamelizasj?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-show-count="true">Follow @iamelizasj</a><script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+    <div class="twitter"> 
+        <a href="https://twitter.com/iamelizasj?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-show-count="true">Follow @iamelizasj</a><script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+    </div>
+ 
 </footer>
 
 
