--- a/src/css/styles/base.css
+++ b/src/css/styles/base.css
@@ -32,6 +32,10 @@ header {
   padding-top: 1em;
 }
 
+main {
+  min-height: calc(100vh - 70px);
+}
+
 ul {
   list-style-type: none;
   padding-left: 0;
@@ -147,8 +151,15 @@ a:hover.header.header__title {
 }
 
 footer {
+  flex-shrink: 0;
   margin: 1em 0em 0em 0em;
   height: 150px;
+  background: #f5f5f5;
+  padding: 0em 0em 0em 2em;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  
 }
 
 footer > p {
@@ -179,6 +190,10 @@ footer,
 .single__date,
 .pagination {
   line-height: 1.7em;
+}
+
+.twitter {
+  padding-top: 1em;
 }
 
 .snippet{
@@ -324,6 +339,10 @@ input {
 
 .single__title {
   line-height: 1em;
+}
+
+li.single__title {
+  padding-top: 0.5em;
 }
 
 .snippet__title,
