--- a/src/css/styles/prism.css
+++ b/src/css/styles/prism.css
@@ -56,7 +56,7 @@ pre[class*="language-"] {
 
 :not(pre) > code[class*="language-"],
 pre[class*="language-"] {
-	background: #f5f2f0;
+	background: #f5f5f5;;
 }
 
 /* Inline code */
@@ -74,7 +74,7 @@ pre[class*="language-"] {
 }
 
 .token.punctuation {
-	color: #999;
+	color: #667296;
 }
 
 .namespace {
@@ -88,7 +88,7 @@ pre[class*="language-"] {
 .token.constant,
 .token.symbol,
 .token.deleted {
-	color: #905;
+	color: #F49912;
 }
 
 .token.selector,
@@ -97,7 +97,7 @@ pre[class*="language-"] {
 .token.char,
 .token.builtin,
 .token.inserted {
-	color: #690;
+	color: #7EB65B;
 }
 
 .token.operator,
@@ -105,18 +105,17 @@ pre[class*="language-"] {
 .token.url,
 .language-css .token.string,
 .style .token.string {
-	color: #a67f59;
-	background: hsla(0, 0%, 100%, .5);
+	color: #C7C7C7;
 }
 
 .token.atrule,
 .token.attr-value,
 .token.keyword {
-	color: #07a;
+	color: #f60c80;
 }
 
 .token.function {
-	color: #DD4A68;
+	color: #5AC5DE;
 }
 
 .token.regex,
