--- a/src/css/styles/base.css
+++ b/src/css/styles/base.css
@@ -412,5 +412,12 @@ li.single__title {
   color: #65D1E9;
 }
 
+.reminder {
+  background-color: #f5f5f5;
+  padding: 2em;
+  border: 4px solid #f60c80;
+}
+
+
 /* single page end */
 
