--- a/src/css/styles/base.css
+++ b/src/css/styles/base.css
@@ -20,7 +20,9 @@ font-family: 'Nunito Sans', sans-serif;
   box-sizing: border-box;
 }
 
-html, body, body#demos {
+html,
+body,
+body#demos {
   height: 100%;
 }
 
@@ -32,6 +34,14 @@ body {
   color: #3b3f4d;
 }
 
+img {
+    max-width: 100%;
+    height: auto;
+    display: block;
+    margin-left: auto;
+    margin-right: auto
+}
+
 body#demos {
   margin: 0;
   display: flex;
@@ -39,11 +49,11 @@ body#demos {
   align-items: center;
 }
 
-canvas { 
-  position:fixed; 
-  top:0; 
-  left:0; 
-  z-index:1;
+canvas {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 1;
 }
 
 header {
@@ -62,7 +72,7 @@ blockquote {
   margin: 1em;
   line-height: 1.5em;
   font-size: 1.7em;
-  quotes: "\201C""\201D""\2018""\2019";
+  quotes: '\201C''\201D''\2018''\2019';
 }
 
 blockquote:before {
@@ -71,7 +81,7 @@ blockquote:before {
   font-size: 4em;
   line-height: 0.2em;
   margin-right: 0.25em;
-  vertical-align: -0.4em; 
+  vertical-align: -0.4em;
 }
 
 blockquote p {
@@ -87,21 +97,20 @@ ul {
   padding-left: 0;
 }
 
-
-a:link, 
-a:visited, 
-a.snippet__more, 
+a:link,
+a:visited,
+a.snippet__more,
 a:visited.snippet__more {
   text-decoration: none;
-  color: #3F3B3C;
+  color: #3f3b3c;
   display: inline-block;
   line-height: 1.05;
   border-bottom: 0.18em solid rgba(255, 225, 0, 0.88);
- }
+}
 
-a:hover, 
-a:active, 
-a:hover.snippet__more, 
+a:hover,
+a:active,
+a:hover.snippet__more,
 a:active.snippet__more {
   background-color: rgb(254, 232, 67);
   background-size: 50% auto;
@@ -126,7 +135,7 @@ a:active.snippet__more {
 }
 
 .header.header__text {
-  font-size: .8rem;
+  font-size: 0.8rem;
   width: 23em;
   padding: 0px;
   line-height: 1.5em;
@@ -157,32 +166,28 @@ a:active.snippet__more {
 }
 
 a.snippet__section.snippet__title,
-a:visited.snippet__section.snippet__title  {
+a:visited.snippet__section.snippet__title {
   text-decoration: none;
-  border-bottom: 0.12em solid #9CDDED;
+  border-bottom: 0.12em solid #9cdded;
   color: #f60c80;
   outline: none;
   font-weight: 400;
   display: inline-block;
-  line-height: 0.80;
-  text-shadow:
-  2px 2px white,
-  2px -2px white,
-  -2px 2px white,
-  -2px -2px white;
+  line-height: 0.8;
+  text-shadow: 2px 2px white, 2px -2px white, -2px 2px white, -2px -2px white;
 }
 
 a:hover.snippet__section.snippet__title,
 a:active.snippet__section.snippet__title {
   color: #f60c80;
-  border-bottom: 0.12em solid #65D1E9;
+  border-bottom: 0.12em solid #65d1e9;
   background-color: rgba(255, 255, 255, 0);
 }
 
 a.header.header__title,
 a:visited.header.header__title
-a:active.header.header__title
-a:hover.header.header__title,
+  a:active.header.header__title
+  a:hover.header.header__title,
 li.menu.menu__item a {
   border-bottom: none;
 }
@@ -206,7 +211,6 @@ footer {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  
 }
 
 footer > p {
@@ -243,7 +247,7 @@ footer,
   padding-top: 1em;
 }
 
-.snippet{
+.snippet {
   margin: 0px 0px 20px 0px;
 }
 
@@ -395,21 +399,17 @@ li.single__title {
 .snippet__title,
 .single__title,
 .related__title {
-  margin: .2em 0 0 0;
+  margin: 0.2em 0 0 0;
   text-decoration: none;
   color: #f60c80;
   outline: none;
   font-weight: 400;
-  text-shadow:
-  2px 2px white,
-  2px -2px white,
-  -2px 2px white,
-  -2px -2px white;
+  text-shadow: 2px 2px white, 2px -2px white, -2px 2px white, -2px -2px white;
 }
 
-.pub_date {
+.pub_date  {
   font-weight: 400;
-  color: #65D1E9;
+  color: #65d1e9;
 }
 
 section.reminder {
@@ -418,6 +418,6 @@ section.reminder {
   border: 4px solid #f60c80;
 }
 
-
 /* single page end */
+
 
